--- a/Text.resx
+++ b/Text.resx
@@ -117,6 +117,66 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="mbox.channelNotFound" xml:space="preserve">
+    <value>没有识别到游戏渠道，请手动选择！</value>
+  </data>
+  <data name="mbox.copyS" xml:space="preserve">
+    <value>复制成功</value>
+  </data>
+  <data name="mbox.gamePathEmpty" xml:space="preserve">
+    <value>未设置游戏目录！</value>
+  </data>
+  <data name="mbox.launchFailed" xml:space="preserve">
+    <value>启动失败，或许你没有安装好原神？</value>
+  </data>
+  <data name="mbox.nothing2Fix" xml:space="preserve">
+    <value>没有需要修复的文件！</value>
+  </data>
+  <data name="mbox.packageEmpty" xml:space="preserve">
+    <value>未指定资源包或指定的资源包不存在</value>
+  </data>
+  <data name="mbox.packageTypeException" xml:space="preserve">
+    <value>意外的资源包类型</value>
+  </data>
+  <data name="mbox.saveF" xml:space="preserve">
+    <value>保存失败</value>
+  </data>
+  <data name="mbox.saveS" xml:space="preserve">
+    <value>保存成功</value>
+  </data>
+  <data name="mbox.notice" xml:space="preserve">
+    <value>提示</value>
+  </data>
+  <data name="mbox.versionException" xml:space="preserve">
+    <value>你选择的资源包版本 ({0})\r\n可能不适用于已安装的游戏版本 ({1})\r\n是否仍要使用该资源包？</value>
+  </data>
+  <data name="tbox.checkingUpdate" xml:space="preserve">
+    <value>[执行中] 正在检查更新..</value>
+  </data>
+  <data name="tbox.error" xml:space="preserve">
+    <value>出错</value>
+  </data>
+  <data name="tbox.newFound" xml:space="preserve">
+    <value>有新版本可下载</value>
+  </data>
+  <data name="tbox.updated" xml:space="preserve">
+    <value>当前已是最新版本，若资源缺失可尝试修复器</value>
+  </data>
+  <data name="tbox.waitServer" xml:space="preserve">
+    <value>等待服务器响应</value>
+  </data>
+  <data name="error.failedCheckUpdate" xml:space="preserve">
+    <value>检查更新失败</value>
+  </data>
+  <data name="error.failedGetVersion" xml:space="preserve">
+    <value>无法获取版本信息</value>
+  </data>
+  <data name="error.preDownloadNotFound" xml:space="preserve">
+    <value>未找到可用的预下载</value>
+  </data>
+  <data name="error.resourceNotFound" xml:space="preserve">
+    <value>未找到可下载的资源</value>
+  </data>
   <data name="msg.doing.delete" xml:space="preserve">
     <value>正在删除文件..</value>
   </data>
@@ -125,6 +185,9 @@
   </data>
   <data name="msg.doing.update" xml:space="preserve">
     <value>正在应用更新..</value>
+  </data>
+  <data name="msg.error.notfound" xml:space="preserve">
+    <value>未找到该游戏渠道的 API</value>
   </data>
   <data name="msg.failed.code" xml:space="preserve">
     <value>错误代码：</value>
